# docworker

./: .gitignore  MANIFEST.in  Makefile  README.md  notes.txt  pyproject.toml
docworker/: add_user.py  analysis_app.py  analysis_util.py  doc_convert.py  doc_convert_test.py  doc_gen.py  doc_gen_test.py  document.py  document_test.py  docworker.service  docx_summary.py  docx_util.py  docx_util_test.py  dw_cli.py  dw_cli_test.py  extract_docx.py  prompts.py  prompts_test.py  requirements.txt  schema.sql  section_util.py  users.py  users_test.py
docworker/samples/: DRAFT SCAP Key Actions and Work Plan (February 2023).docx  DRAFT_SCAP_Key_Actions_and_Work_Plan_February_2023.docx.daf  PA Agenda.docx  PA utility.docx  PA_Agenda.docx.daf  PA_utility.docx.daf  creative-llc-v-elenis.docx  creative-llc-v-elenis.docx.daf  creative-llc.clean-max.txt  creative-llc.clean-partial.s.txt  creative-llc.docx  creative-llc.docx.daf  creative-llc.pdf.daf  creative-llc.s.txt  groff-dejoy.clean-max.s.txt  groff-dejoy.clean-max.txt  groff-dejoy.clean-partial.s.txt  groff-dejoy.clean-partial.txt  groff-dejoy.pdf.daf  groff-dejoy.s.txt  groff-dejoy.txt
docworker/static/: noauth.html  style.css
docworker/templates/: about.html  base.html  docgen.html  doclist.html  docview.html  export.html  generate.html  genresult.html  login.html  main.html  register.html  runlist.html  segview.html  select.html
tests/: conftest.py  data.sql  test_access.py  test_factory.py  test_login.py  test_run.py  test_users.py
